fix for bug #189933 bulletproofing for news crasher when downloading list of newsgroups until I can reproduce it. r/sr=bienvenu